fix(logo): align with breadcrumbs

--- a/assets/css/_sass/website/_layout.scss
+++ b/assets/css/_sass/website/_layout.scss
@@ -23,6 +23,7 @@ nav.side {
     left: 0;
     bottom: 0;
     overflow-y: auto;
+    padding-top: 10px;
     a {
       font-weight: 400 !important;
     }
